# xsltpeds

./: .cproject  .gitignore  .project  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  peds.xsl
.github/: FUNDING.yml
src/: .gitignore  CollectionProcessor.hpp  PedsXmlCollectionProcessor.cpp  PedsXmlCollectionProcessor.hpp  PedsXmlZipfileProcessor.cpp  PedsXmlZipfileProcessor.hpp  PedsXsltProcessor.cpp  PedsXsltProcessor.hpp  Proca.cpp  Proca.hpp  Procf.cpp  Procf.hpp  Proco.cpp  Proco.hpp  SystemXsltProcessor.cpp  SystemXsltProcessor.hpp  ZipArchive.cpp  ZipArchive.hpp  ZipfileExpander.cpp  ZipfileExpander.hpp  ZipfileProcessor.cpp  ZipfileProcessor.hpp  exceptions.hpp  main.cpp
